cabal-version:      3.0
name:               bracelet
version:            0.1.0.0

synopsis:
    A Haskell formatter with a preference for brace-and-semicolon style.

description:
    Bracelet is a lightweight Haskell project exploring formatting with
    explicit braces `{}` and semicolons `;`. Unlike purely indentation-based
    styles, Bracelet encourages a clear, structured block layout that makes
    nesting and scope explicit. Ideal for developers who prefer C-style
    block clarity while keeping Haskell expressive.

license:            GPL-3.0-only
license-file:       LICENSE
author:             Hina-Kagiyama
maintainer:         parasy_celena@outlook.com
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/Hina-Kagiyama/bracelet.git

common warnings
    ghc-options: -Wall

executable bracelet
    import: warnings
    main-is: Main.hs
    other-modules: Format
    build-depends:
        base >=4.14 && <5,
        haskell-src-exts >=1.23 && <2
    ghc-options: -optl=-Wl,--gc-sections
    hs-source-dirs: app
    default-language: Haskell2010
